--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,56 +1,4 @@
-<!--<nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">WebSiteName</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Page 1</a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-        <div class="dropdown">
-          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown link
-          </a>
-        
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </div>
-        
-      </ul>
-      
-    </div>
-  </nav>
-
- <div class="navbar">
-    <a href="#home">Home</a>
-    <a href="#news">News</a>
-    <div class="dropdown">
-      <button class="dropbtn">Dropdown
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
-      </div>
-    </div>
-  </div>
-
-  <nav class='navbar navbar-expand navbar-light bg-light'>
-    <a class='navbar-brand'></a>
-    <ul class='nav nav-pills'>
-    <li><a class='nav-link' [routerLink]="['/customer']">Home</a></li>
-    <li><a class='nav-link' [routerLink]="['/']">Accounts</a></li>
-    <li><a class='nav-link' [routerLink]="['/']">Transfer</a></li>
-    </ul>
-  </nav> -->
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -58,24 +6,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-        <!--/customer',customerId-->
-          <a class="nav-link" [routerLink]="['home']">Home 
-            <!--<span class="sr-only">(current)</span>--></a>
+          <a class="nav-link" [routerLink]="['home']">Home </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['transfer']">Transfer</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['statement']">Statement</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-          </div>
         </li>
       </ul>
         
@@ -87,7 +24,7 @@
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" [routerLink]="['customerdetails']">Profile</a>
-            <a class="dropdown-item" href="#">Logout</a>
+            <a class="dropdown-item" [routerLink]="['']" >Logout</a>
           </div>
         </li>
       </ul>
@@ -95,7 +32,6 @@
     </div>
     
   </nav>
-  
 
   <div class="container">
   <router-outlet></router-outlet>
